# routers/router.go
@@ -9,22 +9,6 @@ import (
 )
 
 func init() {
-	/*
-    beego.Router("/", &controllers.MainController{})
-
-	beego.Router("apis/history", &controllers.HistoryController{})
-	beego.Router("apis/mgetdevice", &controllers.MGetDeviceController{})
-
-	beego.Router("/", &controllers.MainController{})
-	ns := beego.NewNamespace("/apis",
-		beego.NSNamespace("/user",
-			beego.NSInclude(
-				&controllers.UserController{},
-			),
-		),
-	)
-*/
-	//beego.Router("/auth", &controllers.AuthController{})
 	ns1 := beego.NewNamespace("/v1/",
 		beego.NSNamespace("/auth",
 			beego.NSInclude(
@@ -40,6 +24,11 @@ func init() {
 		beego.NSNamespace("/apis/admin",
 			beego.NSInclude(
 				&controllers.AdminController{},
+			),
+		),
+		beego.NSNamespace("/apis/timer",
+			beego.NSInclude(
+				&controllers.TimerController{},
 			),
 		),
 	)
